# pyfdl

./: .gitignore  .gitmodules  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy_docs.yml  test_pyfdl.yml
Classes/canvas/: index.html
Classes/canvas_template/: index.html
Classes/common/: index.html
Classes/context/: index.html
Classes/errors/: index.html
Classes/fdl/: index.html
Classes/framing_decision/: index.html
Classes/framing_intent/: index.html
Classes/header/: index.html
FDL Classes/canvas/: index.html
FDL Classes/canvas_template/: index.html
FDL Classes/common/: index.html
FDL Classes/context/: index.html
FDL Classes/errors/: index.html
FDL Classes/fdl/: index.html
FDL Classes/framing_decision/: index.html
FDL Classes/framing_intent/: index.html
FDL Classes/header/: index.html
Handlers/handlers/: index.html
Plugins/plugins/: index.html
Plugins/registry/: index.html
contributions/: index.html
docs/: contributions.md  getting_started.md  index.md  top_level_functions.md
docs/Classes/: common.md  context.md  fdl.md  framing_decision.md
docs/FDL Classes/: canvas.md  canvas_template.md  common.md  context.md  errors.md  fdl.md  framing_intent.md  header.md
docs/Handlers/: handlers.md
docs/Plugins/: plugins.md  registry.md
getting_started/: index.html
search/: search_index.json
src/pyfdl/: __init__.py  base.py  canvas.py  canvas_template.py  classes.py  clipid.py  common.py  context.py  errors.py  fdl.py  fraaming_intent.py  framing_decision.py  framing_dexision.py  framing_intent.py  header.py  pyfdl.py  rounding.py
src/pyfdl/handlers/: __init__.py  fdl_handler.py
src/pyfdl/io/: builtin.py
src/pyfdl/plugins/: __init__.py  registry.py
src/pyfdl/schema/: README.md
src/pyfdl/schema/v2.0/: ascfdl.schema.json
tests/: conftest.py  test_canvas.py  test_canvas_template.py  test_clipid.py  test_common.py  test_context.py  test_docs.py  test_framing_decision.py  test_framing_intent.py  test_handlers.py  test_header.py  test_pyfdl.py  test_registry.py
tests/sample_data/: Scenario-9__FDL_DeliveredToVFXVendor.fdl  Scenario-9__OriginalFDL_UsedToMakePlate.fdl
tests/sample_data/dummy-plugin/: LICENSE.txt  README.md  pyproject.toml
tests/sample_data/dummy-plugin/src/dummy_plugin/: __init__.py
tests/sample_data/faulty-handler-plugin/: README.md  pyproject.toml
tests/sample_data/faulty-handler-plugin/src/faulty_handler_plugin/: __about__.py  __init__.py
tests/sample_data/handler-plugin/: README.md  pyproject.toml
tests/sample_data/handler-plugin/src/handler_plugin/: __init__.py
top_level_functions/: index.html
