[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfdl"
version = "0.1.0"
authors = [
  { name="Daniel Flehner Heen", email="flehnerheener@gmail.com" },
]
description = "Toolkit for parsing and producing ASC FDL files"
license = {file="LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["jsonschema"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English"
]
keywords = ["film", "tv", "editing", "editorial", "fdl", "asc", "conform", "reformat", "vfx"]

[project.urls]
"Homepage" = "https://github.com/apetrynet/pyfdl"
"Bug Tracker" = "https://github.com/apetrynet/pyfdl/issues"

#[project.entry-points."pyfdl"]
#pyfdl = "pyfdl"

#[tool.setuptools]
#packages = ["fdl"]

[tool.hatch.build.targets.sdist]
# Ensure the sdist includes a setup.py for older pip versions
support-legacy = true
exclude = [".github"]
