[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfdl"
authors = [
  { name="Daniel Flehner Heen", email="flehnerheener@gmail.com" },
]
description = "Toolkit for parsing and producing ASC FDL files"
dynamic = ["version"]
license = {file="LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jsonschema"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English"
]
keywords = ["film", "tv", "editing", "editorial", "fdl", "asc", "conform", "reformat", "vfx"]

[project.urls]
"Source" = "https://github.com/apetrynet/pyfdl"
"Issues" = "https://github.com/apetrynet/pyfdl/issues"
"Documentation" = "https://apetrynet.github.io/pyfdl"

[tool.hatch.version]
path = "src/pyfdl/__init__.py"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "mktestdocs"
]

[tool.hatch.envs.test.scripts]
test = "pytest -v ."

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-autorefs"
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.hatch.build.targets.sdist]
# Ensure the sdist includes a setup.py for older pip versions
support-legacy = true
exclude = [".github"]
