[project]
name = "pyfdl"
dynamic = ["version"]
description = "Toolkit for parsing and producing ASC FDL files"
readme = "README.md"
authors = [
    { name = "Daniel Flehner Heen", email = "flehnerheener@gmail.com" }
]
license = {file="LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English"
]
keywords = ["film", "tv", "editing", "editorial", "fdl", "asc", "conform", "reformat", "vfx"]
dependencies = [
    "jsonschema>=4.25.1",
]

[project.urls]
"Source" = "https://github.com/apetrynet/pyfdl"
"Issues" = "https://github.com/apetrynet/pyfdl/issues"
"Documentation" = "https://apetrynet.github.io/pyfdl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pyfdl/__init__.py"

[dependency-groups]
dev = [
    "mktestdocs>=0.2.5",
    "pip>=25.3",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "mktestdocs>=0.2.5",
]
