[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dummy-plugin"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Alan Smithee", email = "alan@whomadeit.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyfdl"
]

[tool.hatch.version]
path = "src/dummy_plugin/__about__.py"

[project.entry-points."pyfdl.plugins"]
dummy_plugin1 = "dummy_plugin:register_plugin_func"
dummy_plugin2 = "dummy_plugin"
